Add components update some logic

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,34 +1,12 @@
-.App {
-  text-align: center;
-}
+//helpers
+@import "scss/helpers/helpers.media.scss";
+@import "scss/helpers/helpers.functions.scss";
+@import "scss/helpers/helpers.mixins.scss";
+@import "scss/helpers/helpers.variables.scss";
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
+//general
+@import "scss/general/general.base.scss";
+@import "scss/general/general.buttons.scss";
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
-}
+//blocks
+@import "scss/blocks/blocks.form.scss";
