--- a/src/App.scss
+++ b/src/App.scss
@@ -13,3 +13,4 @@
 //blocks
 @import "scss/blocks/blocks.form.scss";
 @import "scss/blocks/blocks.checkbox.scss";
+@import "scss/blocks/blocks.text-input.scss";
