--- a/src/scss/general/_general.btn.scss
+++ b/src/scss/general/_general.btn.scss
@@ -7,6 +7,7 @@
     font: 400 16px/22px $secondary;
     height: 45px;
     justify-content: center;
+    margin-top: 50px;
     padding: 0;
     outline: none;
     text-decoration: none;
