--- a/src/scss/general/_general.base.scss
+++ b/src/scss/general/_general.base.scss
@@ -15,7 +15,11 @@ main {
 }
 
 article {
-    margin-top: calc(15vh);
+    margin-top: calc(5vh);
+
+    @include min-screen(1024px) {
+        margin-top: calc(15vh);
+    }
 }
 
 .inner {
