--- a/src/scss/general/_general.btn.scss
+++ b/src/scss/general/_general.btn.scss
@@ -10,7 +10,9 @@
     margin-top: 50px;
     padding: 0;
     outline: none;
+    opacity: 1;
     text-decoration: none;
+    // transition: background-color 300ms ease-in-out, color 300ms ease-in-out, opacity 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
     transition: background-color 300ms ease-in-out, color 300ms ease-in-out;
     width: 110px;
     z-index: 9;
@@ -27,5 +29,10 @@
     &:hover {
         background-color: $orange;
         color: $white;
+    }
+
+    &:disabled {
+        // opacity: 0.7;
+        // pointer-events: none;
     }
 }
